# deep_statutes

./: .continueignore  README.md  lark_incremental.ipynb  pyproject.toml
scripts/: gemini_summarize_structure.ipynb  pdf_gemini.ipynb  pdf_gemini_generic.ipynb  pdf_standouts.ipynb  pdf_tokens.ipynb  read_corpus.ipynb
src/deep_statutes/: __init__.py  config.py
src/deep_statutes/lark/: __init__.py  util.py
src/deep_statutes/pdf/: corpus.py  parse.py  sample.py  split.py  toc.py  token_stream.py  util.py
src/deep_statutes/pdf/llm_extract/: gemini_toc.py  split.py  toc.py
src/deep_statutes/states/: __init__.py
src/deep_statutes/states/co/: clean_token_stream.py  convert.py  download.py  parse_pdf.py  split.py  summarize.py  token_stream.py
src/deep_statutes/states/us/: download.py
src/deep_statutes/states/wy/: convert.py  download.py  grammar.lark  parse_pdf.py
tests/states/co/: test_split.py
