[project]
name = "deep-statutes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric Foley", email = "ericdfoley@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "lark>=1.2.2",
    "pymupdf>=1.25.5",
    "requests>=2.32.3",
]

[project.scripts]
deep-statutes = "deep_statutes:main"
wy-download = "deep_statutes.states.wy.download:main"
wy-pdf-tokens = "deep_statutes.states.wy.token_stream:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
