[project]
name = "deep-statutes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric Foley", email = "ericdfoley@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-genai>=1.11.0",
    "lark>=1.2.2",
    "numpy>=2.2.5",
    "pdfplumber>=0.11.6",
    "pymupdf>=1.25.5",
    "requests>=2.32.3",
]

[project.scripts]
deep-statutes = "deep_statutes:main"
# generic
pdf-sample = "deep_statutes.pdf.sample:main"
llm-split = "deep_statutes.pdf.split:main"
# state-specific
co-download = "deep_statutes.states.co.download:main"
co-split = "deep_statutes.states.co.split:main"
co-summarize = "deep_statutes.states.co.summarize:main"
us-download = "deep_statutes.states.us.download:main"
wy-download = "deep_statutes.states.wy.download:main"
wy-convert = "deep_statutes.states.wy.convert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
